odradjene get i post metode

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,9 @@
   <h1>
     Testiramo usera
   </h1>
-  <p>Neki tekst<p>
+  <p><button (click)="callGet()">Call get</button></p>
+  <p><button (click)="callPost()">Call post</button></p>
+  
+  
   
  
