--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,79 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+#center {
+	 position: absolute;
+	 top: 40%;
+	 left: 50%;
+  margin: -150px 0 0 -150px;
+}
+.mainTitle{
+   text-align: center
+}
+		footer {
+   background-color: #008080;
+}
+        
+.example-icon {
+  flex: 0.05 1 auto;
+  margin-right: 100px;
+}
+.divlog{
+    margin-right: 50px;
+}
+.divreg{
+    margin-right: 10px;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+.title{
+    text-align: center;
+}
+
+.example-card-div
+{
+  display: inline-block;
+  width: 600px;
+  height: 100px;
+  margin: 20px;
+  margin-top:20px;
+  margin-right: -15%;
+  text-align: center;
+}
+
+.example-card {
+  
+  max-width: 35%;
+  margin: 5em auto;
+  text-align: center;
+}
+
+
+.done {
+  position: fixed;
+  top: 150px;
+  left: 20px;
+  color: white;
+}
+.addDialog{
+  max-width: 50%;
+}
+.example-section {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  height: 60px;
+}
+
+.example-margin {
+  margin: 0 10px;
+}
+
+.acc-dialog {
+  
+  max-width: 90%;
+  margin: 1em auto;
+  text-align: center;
+}
+
